--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -3,7 +3,7 @@
     font-family: Verdana, "DejaVu Sans", sans-serif;
 }
 
-#blue {
+#second {
     color: #0000FF;
     font-size: 36px;
 }
@@ -12,7 +12,7 @@
     font-size: 24px;
 }
 
-#green {
+#fourth {
     background-color: #80FF80;
     font-size: 24px;
     font-weight: bold;
