--- a/foundations/intro-to-css/05-descendant-combinator/style.css
+++ b/foundations/intro-to-css/05-descendant-combinator/style.css
@@ -5,9 +5,16 @@
     text-align: center;
 }  */
 
-.container .text {
+/* .container .text {
     background-color: #FFFF00;
     color: #FF0F00;
+    font-size: 20px;
+    text-align: center;
+} */
+
+div p.text {
+    background-color: yellow;
+    color: red;
     font-size: 20px;
     text-align: center;
 }
